<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_48dp"
        android:title="@string/menu_home"
        android:visible="true"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/menu_search"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_white_48dp"
        android:title="@string/menu_favourites"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat_white_48dp"
        android:title="@string/menu_chat"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/shopping"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_white_48dp"
        android:title="@string/menu_shopping"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>